add header section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,20 @@
     </style>
   </head>
   <body>
-    <main class="main-container"></main>
+    <main class="main-container">
+      <header class="input-container">
+        <input
+          class="city-input"
+          placeholder="Search city"
+          type="text"
+          name=""
+          id=""
+        />
+        <button class="search-button">
+          <i class="fa-solid fa-magnifying-glass"></i>
+        </button>
+      </header>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
