--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
     </style>
   </head>
+
   <body>
     <main class="main-container">
       <header class="input-container">
@@ -28,6 +33,57 @@
           <i class="fa-solid fa-magnifying-glass"></i>
         </button>
       </header>
+
+      <section class="weather-info">
+        <div class="location-date-container">
+          <div class="location">
+            <span class="material-symbols-outlined"> location_on </span>
+            <h4 class="country-text">Younde</h4>
+          </div>
+          <div class="current-date-text">
+            <span>wed, 07 Aug</span>
+          </div>
+        </div>
+
+        <div class="weather-summary-container">
+          <div class="weather-tempeature">
+            <p class="temperature.value">37 °C</p>
+            <span>Nuageux</span>
+          </div>
+          <div class="weather-humidity-wind">
+            <div class="weather-humility">
+              <div class="weather-humidity-icon">
+                <span class="material-symbols-outlined"> humidity_mid </span>
+              </div>
+              <div>
+                <div class="weather-humidity-value">
+                  <span>57%</span>
+                </div>
+                <div class="weather-humidity-text">
+                  <span>humidity</span>
+                </div>
+              </div>
+            </div>
+            <div class="weather-wind">
+              <div class="weather-wind-icon">
+                <span class="material-symbols-outlined"> air </span>
+              </div>
+              <div>
+                <div class="weather-wind-value">
+                  <span>6.1 M/s</span>
+                </div>
+                <div class="weather-wind-text">
+                  <span>Wind Speed</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="infos-container">
+            <p>Powered By Franck Emmanuel D.</p>
+            <p>Copyright 2024</p>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="script.js"></script>
   </body>
