--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
       <header class="input-container">
         <input
           class="city-input"
-          placeholder="Search city"
+          placeholder="Search City"
           type="text"
           name=""
-          id=""
+          id="input-city"
         />
         <button class="search-button">
           <i class="fa-solid fa-magnifying-glass"></i>
@@ -38,17 +38,24 @@
         <div class="location-date-container">
           <div class="location">
             <span class="material-symbols-outlined"> location_on </span>
-            <h4 class="country-text">Younde</h4>
+            <h4 class="country-text" id="city">Konoha</h4>
           </div>
-          <div class="current-date-text">
+          <div class="current-date-text" id="currentDate">
             <span>wed, 07 Aug</span>
           </div>
         </div>
 
         <div class="weather-summary-container">
-          <div class="weather-tempeature">
-            <p class="temperature.value">37 °C</p>
-            <span>Nuageux</span>
+          <div class="weather-temperature">
+            <div class="image-container">
+              <img src="Images/clouds.png" class="icon" alt="">
+            </div>
+            <div class="weather-temperature-infos">
+              <p class="temperature.value" id="temp">24 °C</p>
+            </div>
+          </div>
+          <div class="state-div">
+            <span id="state">Clouds</span>
           </div>
           <div class="weather-humidity-wind">
             <div class="weather-humility">
@@ -57,7 +64,7 @@
               </div>
               <div>
                 <div class="weather-humidity-value">
-                  <span>57%</span>
+                  <span id="humidity">57%</span>
                 </div>
                 <div class="weather-humidity-text">
                   <span>humidity</span>
@@ -70,7 +77,7 @@
               </div>
               <div>
                 <div class="weather-wind-value">
-                  <span>6.1 M/s</span>
+                  <span id="wind">6.1 M/s</span>
                 </div>
                 <div class="weather-wind-text">
                   <span>Wind Speed</span>
