add image alt and pulisce the code

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="weather-summary-container">
           <div class="weather-temperature">
             <div class="image-container">
-              <img src="Images/clouds.png" class="icon" alt="">
+              <img src="Images/clouds.png" class="icon" alt="clouds image">
             </div>
             <div class="weather-temperature-infos">
               <p class="temperature.value" id="temp">24 °C</p>
